--- a/css/style.css
+++ b/css/style.css
@@ -738,7 +738,17 @@ h3 {
     display: none;
   }
 }
+@media (max-width: 767px) {
+  .slider_area .title_text h4 {
+    font-size: 20px; /* Smaller font size for mobile devices */
+  }
+}
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .slider_area .title_text h4 {
+    font-size: 24px; /* Medium font size for tablets */
+  }
+}
 /* line 44, C:/Users/SPN Graphics/Desktop/CL September/209/HTML/scss/_slick-nav.scss */
 .slicknav_menu .slicknav_nav .slicknav_btn {
   background-color: transparent;
